--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,11 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.line-through {
+  text-decoration: line-through;
+}
+
+.task {
+  display: block;
+}
